Add ScopedAllowIO in WebrtcTransport when shutting down WebRTC session.

PeerConnection creates new threads internally and shuts them down when
connection is closed. This is a blocking operation, so Debug builds were
DCHECK'ing every time connection is terminated. Added ScopedAllowIO to
work around this issue.

BUG=660081

Review-Url: https://codereview.chromium.org/2567533002
Cr-Commit-Position: refs/heads/master@{#437711}

Former-commit-id: 2c41f984a001aa9f1c686ef2d888fdfa1fcaea23